# foundation-lab

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  mcp.rs
fl/: Cargo.toml
fl/src/: fido.rs  piv.rs
relay/: Cargo.toml
relay/src/: main.rs
v1-client/: Cargo.toml  README.md
v1-client/src/: main.rs  transport.rs
